--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,8 @@ label {
   -webkit-clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%);
           clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%);
   margin: 0 auto;
+  -webkit-transform: translateY(100px);
+          transform: translateY(100px);
 }
 
 input[type="text"], input[type="submit"] {
