--- a/css/main.sass
+++ b/css/main.sass
@@ -40,6 +40,7 @@ label
 .form
     clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%)
     margin: 0 auto
+    transform: translateY(100px)
 
 input[type="text"], input[type="submit"]
     padding: 1.2em
